--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mocha": "^8.0.1",
     "mock-fs": "^4.12.0",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "@generative-music/sample-index-transformer": "^0.1.1"
   }
 }
