--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "@generative-music/fs-provider",
   "version": "0.0.0",
   "description": "An audio sample file provider for Node",
-  "main": "index.js",
+  "main": "lib/make-provider.js",
   "scripts": {
     "test": "mocha lib --recursive",
     "test:watch": "npm test -- --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "preversion": "npm run lint && npm test",
+    "postversion": "git push && git push --tags"
   },
+  "files": [
+    "lib/!(*.spec).js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/generative-music/fs-provider.git"
