--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@generative-music/fs-provider",
   "version": "0.1.0",
   "description": "An audio sample file provider for Node",
-  "main": "lib/make-provider.js",
+  "main": "lib/create-provider.js",
   "scripts": {
     "test": "mocha lib --recursive",
     "test:watch": "npm test -- --watch",
@@ -27,11 +27,12 @@
     "chai": "^4.2.0",
     "eslint": "^7.2.0",
     "eslint-config-metalex9": "^0.4.0",
-    "mocha": "^8.0.1",
-    "mock-fs": "^4.12.0",
+    "file-type": "^16.0.0",
+    "mocha": "^8.2.0",
+    "mock-fs": "^4.13.0",
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "@generative-music/sample-index-transformer": "^0.1.1"
+    "audiobuffer-to-wav": "^1.0.0"
   }
 }
